--- a/src/react-sliding-pane.css
+++ b/src/react-sliding-pane.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   background: #fff;
+  border-radius: 30px 30px 0 0;
   min-width: 100px;
   height: 100%;
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5);
@@ -32,8 +33,8 @@
   transform: translateX(-100%);
 }
 .slide-pane_from_bottom {
-  height: 90vh;
-  margin-top: 10vh;
+  height: 80vh;
+  margin-top: 20vh;
   transform: translateY(100%);
 }
 .slide-pane_from_bottom.content-after-open {
@@ -43,11 +44,14 @@
   transform: translateY(100%);
 }
 .slide-pane__overlay {
+  width: 100%;
   position: fixed;
   top: 0px;
   left: 0px;
   right: 0px;
   bottom: 0px;
+  max-width: 500px;
+  margin: 0 auto;
   background-color: rgba(0, 0, 0, 0);
 }
 .slide-pane__overlay.overlay-after-open {
